Add Some Change

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ header .search {
 header .search input {
     width: 130px;
     border: none;
+    background: none;
 }
 header .search input:focus::placeholder {
     visibility: hidden;
