--- a/css/style.css
+++ b/css/style.css
@@ -140,16 +140,13 @@ header .search {
 header .search input {
     width: 130px;
     border: none;
-    background: none;
+    background: transparent;
 }
 header .search input:focus::placeholder {
     visibility: hidden;
 }
 header .search input:focus {
     width: 170px;
-}
-header .search input[tybe="search"]:focus ~ .fa-search {
-    display: none;
 }
 header .search i {
     margin: 0 10px;
@@ -428,6 +425,7 @@ header .info .noti-icon::before {
     bottom: 0px;
     right: 0px;
 }
+
 /* --- End project-progress --- */
 /* --- Start remainder --- */
 .reminders .items .item {
@@ -493,6 +491,10 @@ header .info .noti-icon::before {
 .social-media .item .icon {
     width: 60px;
     height: 55px;
+    transition: .3s;
+}
+.social-media .item .icon:hover {
+    transform: rotate(5deg);
 }
 .social-media .item .icon i {
     font-size: 1.8em;
@@ -553,6 +555,21 @@ header .info .noti-icon::before {
     .welcome .details .detail:not(:last-child) {
         margin-bottom: 20px;
     }
+    .year-info .box {
+        align-items: center;
+    }
+    .year-info .box .icon {
+        margin: 0 0 10px 0;
+    }
+    .year-info .box .data {
+        width: 70%;
+    }
+    .year-info .box .icon {
+        width: 100%;
+    }
+    .year-info .box .data h3 {
+        margin: 5px 0 30px;
+    }
     .tickets .boxes .box {
         width: 100%;
     }
@@ -567,6 +584,17 @@ header .info .noti-icon::before {
     }
     .latest-news .info .ago {
         margin-left: 0;
+    }
+}
+@media (max-width: 400px) {
+    .yearly-targets .year-info .box .data {
+        width: 100%;
+    }
+    .reminders .items .item .info {
+        width: 140px;
+    }
+    .project-progress .items .item p {
+        width: 125px;
     }
 }
 /*--- End Dashboard ---*/
@@ -599,6 +627,7 @@ header .info .noti-icon::before {
     border: #ccc solid 1px;
 }
 .genaral-info form .field input[type="email"] {
+    cursor: no-drop;
     flex: 1;
     background-color: #eee;
 }
@@ -642,15 +671,16 @@ header .info .noti-icon::before {
     padding: 0 10px;
 }
 .widgest .wedget input {
-    display: none;
+    --webkit-appearance : none;
+    appearance: none;
 }
 .widgest .wedget label {
     position: relative;
     padding-left: 30px;
     font-weight: 500;
 }
-.widgest .wedget label::before {
-    content: '';
+.widgest .wedget label::before,
+.widgest .wedget label::after {
     width: 15px;
     height: 15px;
     position: absolute;
@@ -658,6 +688,9 @@ header .info .noti-icon::before {
     left: 0;
     margin-top: -9.5px;
     border-radius: 4px;
+}
+.widgest .wedget label::before {
+    content: '';
     border: 2px #777 solid;
 }
 .widgest .wedget label::after {
@@ -667,13 +700,8 @@ header .info .noti-icon::before {
     border: 2px solid var(--MainColor);
     border-radius: 4px;
     color: white;
-    width: 15px;
-    height: 15px;
-    font-size: .8em;
-    position: absolute;
-    top: 50%;
+    font-size: 12px;
     margin-top: -9.5px;
-    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
